fix(core): Fixed broken styles on ons-page and ons-toolbar.

--- a/core/css/common.css
+++ b/core/css/common.css
@@ -85,12 +85,12 @@ ons-bottom-toolbar {
   -ms-touch-action: pan-y;
 }
 
-.navigation-bar + .page__background + .page__content {
+.toolbar + .page__background + .page__content {
   margin-top: -1px;
   top: 44px;
 }
 
-.navigation-bar--material + .page__background + .page__content {
+.toolbar--material + .page__background + .page__content {
   top: 56px;
 }
 
@@ -98,16 +98,16 @@ ons-bottom-toolbar {
   top: 20px;
 }
 
-.page[status-bar-fill] > .navigation-bar {
+.page[status-bar-fill] > .toolbar {
   padding-top: 20px;
   box-sizing: content-box;
 }
 
-.page[status-bar-fill] > .navigation-bar + .page__background + .page__content {
+.page[status-bar-fill] > .toolbar + .page__background + .page__content {
   top: 64px;
 }
 
-.page[status-bar-fill] > .navigation-bar--material + .page__background + .page__content {
+.page[status-bar-fill] > .toolbar--material + .page__background + .page__content {
   top: 76px;
 }
 
@@ -123,11 +123,11 @@ ons-tabbar[position="top"] .page[status-bar-fill] > .page__content {
   top: 0px;
 }
 
-.navigation-bar + .page__background + .page__content ons-tabbar[status-bar-fill] > .tabbar--top {
+.toolbar + .page__background + .page__content ons-tabbar[status-bar-fill] > .tabbar--top {
   top: 0px;
 }
 
-.navigation-bar + .page__background + .page__content ons-tabbar[status-bar-fill] > .tabbar--top__content {
+.toolbar + .page__background + .page__content ons-tabbar[status-bar-fill] > .tabbar--top__content {
   top: 49px;
 }
 
